[project]
name = "address-matcher"
version = "0.1.0"
description = "FastAPI service for fuzzy matching of addresses"
authors = []
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "rapidfuzz>=3.6.1",
    "pydantic>=2.0.0",
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/address_matcher"]

[tool.rye]
managed = true
dev-dependencies = [] 
